ruffd-macros/tests/notification/additional_param.stderr
error: Exactly one or zero parameters allowed
 --> tests/notification/additional_param.rs:3:1
  |
3 | #[notification]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `notification` (in Nightly builds, run with -Z macro-backtrace for more info)
